load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

# C shim around the SDK's `static inline` DLSS-RR helper macros (the FFI in
# `src/dlss/sys.rs` binds these). A Bazel consumer links this via a
# `crate.annotation` with `gen_build_script = "off"`; the standalone Cargo
# `build.rs` compiles the same source directly instead.
cc_library(
    name = "dlss_helpers",
    srcs = ["src/dlss/dlss_wrapper.c"],
    deps = [
        "@dlss//:dlss_headers",
        "@vulkan_sdk_1.4.341.1//:vulkan_headers",
    ],
)

# Native link dependencies for the crate's active backend
cc_library(
    name = "backend",
    deps = select({
        "@platforms//os:macos": [],
        "//conditions:default": [
            ":dlss_helpers",
            "@dlss//:dlss",
        ],
    }),
)

# Runtime DLLS
filegroup(
    name = "backend_runtime",
    srcs = select({
        "@platforms//os:macos": [],
        "//conditions:default": ["@dlss//:dlssd_runtime"],
    }),
)
