module(
    name = "pumicite_super_resolution",
    version = "0.1.0",
)

# -----------------------------------------------------------------------------
# Vulkan SDK — needed by the DLSS C shim, which includes <vulkan/vulkan.h>.
# -----------------------------------------------------------------------------
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_vulkan", version = "0.7.0")

vulkan_sdk = use_extension("@rules_vulkan//vulkan:extensions.bzl", "vulkan_sdk")
vulkan_sdk.toolchain(version = "1.4.341.1")
use_repo(vulkan_sdk, "vulkan_sdk_1.4.341.1")

register_toolchains("@vulkan_sdk_1.4.341.1//:all")

# Fork providing the SDK toolchain (matches dust). A `git_override` in a
# non-root module is ignored, so when this module is consumed by another (e.g.
# dust) that module's own rules_vulkan override applies instead.
git_override(
    module_name = "rules_vulkan",
    remote = "https://github.com/mxpv/rules_vulkan",
    commit = "91b9e9a26615000f86322c2798f0e06ecf11219a",
)

# -----------------------------------------------------------------------------
# NVIDIA DLSS SDK (headers + prebuilt NGX libraries + runtime DLLs).
# -----------------------------------------------------------------------------
new_git_repository = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:git.bzl",
    "new_git_repository",
)

new_git_repository(
    name = "dlss",
    remote = "https://github.com/NVIDIA/DLSS.git",
    commit = "a291cc7d2cc642a51566f3dfd5376f635cd1b284",
    build_file = "//third_party:dlss.BUILD.bazel",
)
